Clean up warnings, fix url lookup